# Sunny

./: .gitignore  exec_ast.js  functions.js  index.js  keys.js  make_ast.js  to.js
2/: README.md  TODO.sny  index.js  types.sny
2/files/: main.sny  test.sny
2/src/: exec_ast.js  functions.js  info.js  keys.js  make_ast.js  tokenize.js  values.js
3/: help.txt  index.js
4/: Cargo.toml
4/files/: bad_encoded.txt  colors.toml  invalid.txt  main.sny
4/src/: main.rs  parse_flags.rs
5/: Cargo.toml  README.md
5/files/: Sunny.toml  main.sny
5/src/: about.rs  colors.rs  console.rs  errors.rs  files.rs  info.rs  main.rs  parse_args.rs  parsed_args.rs  paths.rs  stdlib.rs  toml_stuff.rs  types.rs
deprecated/v1/: tokenize.js
deprecated/v2/: 1.qua  TODO.sny
deprecated/v5/: README.md
deprecated/v9/: Cargo.toml
deprecated/v9/src/: main.rs
deprecated/v9/src/commands/: mod.rs
deprecated/v9/src/commands/help/: mod.rs
deprecated/v9/src/commands/version/: mod.rs
deprecated/v9/src/context/tokens/: numbers.rs
deprecated/v9/tests/: a.py
deprecated/v9/tests/test1/: Cargo.toml
deprecated/v9/tests/test2/: Cargo.toml
deprecated/v9/tests/test2/src/: main.rs
latest/v13/: Cargo.toml
lib/: fs.js  io.js
stable/v13/: Cargo.toml  definitions.txt  definitions.txt.dart
test/: main  main.asm
test/repl_v1/: .gitignore  Cargo.toml  index.ts  test.txt
test/v1/: identifiers.js
test/v11/: Cargo.toml
test/v12/: Cargo.toml
test/v2/: run.md
test/v8/: Cargo.toml
v1 (test)/lib/: json.js
v1.test/: main.sny  test.qua
v10/: Cargo.toml  test.js
v10/files/: main.sny  syntaxes.sny  test1.sny  (+4 more)
v3/: help.txt
v6/: Cargo.toml
v7/: Cargo.toml
v9/: Cargo.toml  rEADME.md
v9/files/: main.sny  point.sny
v9/src/: about.rs  aliases.rs  args.rs  colors.rs  macros.rs  main.rs  table.rs  util.rs  values.rs
v9/src/commands/help/: mod.rs
v9/src/commands/repl/: mod.rs
v9/src/commands/run/: mod.rs
v9/src/context/: expressions.rs  mod.rs  statements.rs
v9/src/context/tokens/: mod.rs  numbers.rs  words.rs
v9/src/repl/: mod.rs
v9/tests/: 00000.sny  1.sny  Untitled-1.rs  Untitled-2.rs  Untitled-4.rs  Untitled-4.sny  a.py  ast.js  test.sny  test1.rs  test2.rs  tokens1.sny
v9/tests/test1/src/: classes.rs  enums.rs  functions.rs  instances.rs  main.rs  structs.rs  tests.rs  types.rs  values.rs  variants.rs
v9/tests/test2/src/: asd.sny  layout.sny  main.rs  value.rs  value.zig
(+296 files in other folders)
