[package]
name = "sunny"
authors = ["valcubetaa@gmail.com"]
version = "0.9.0"
edition = "2021"

# See more keys and their definitions
# at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num-bigint = { version = "0.4.4", features = ["rand"] }
bigdecimal = { version = "0.4.2" }
peekmore = "1.3.0"
regex = "1.10.2"
hyper = "0.14.27"
serde = "1.0.192"
chrono = "0.4.31"
tokio = "1.33.0"
# just as a personal challenge
# this has no documentation. i need to learn how to use serde
# xml_serde = "1.4.1"